--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyD7jQPP3qGCcsiVynCj30RF9f59QZsbA18",
-    authDomain: "rostatsdata.firebaseapp.com",
-    projectId: "rostatsdata",
-    storageBucket: "rostatsdata.appspot.com",
-    messagingSenderId: "786155982981",
-    appId: "1:786155982981:web:91862ca4336350314299ec",
-    measurementId: "G-W82VSPMJXH"
+  var firebaseConfig = {
+  apiKey: "AIzaSyD7jQPP3qGCcsiVynCj30RF9f59QZsbA18",
+  authDomain: "rostatsdata.firebaseapp.com",
+  projectId: "rostatsdata",
+  storageBucket: "rostatsdata.appspot.com",
+  messagingSenderId: "786155982981",
+  appId: "1:786155982981:web:c8825bc47d7226754299ec",
+  measurementId: "G-DXF7K21M8C"
   };
 
   // Initialize Firebase
