--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyBPmZU5GIVK_6iDzROpMaYgUaqVu4FadlY",
-      authDomain: "fir-web-login-8b7c5.firebaseapp.com",
-      databaseURL: "https://fir-web-login-8b7c5.firebaseio.com",
-      projectId: "fir-web-login-8b7c5",
-      storageBucket: "fir-web-login-8b7c5.appspot.com",
-      messagingSenderId: "301701306998"
+   apiKey: "AIzaSyD7jQPP3qGCcsiVynCj30RF9f59QZsbA18",
+  authDomain: "rostatsdata.firebaseapp.com",
+  projectId: "rostatsdata",
+  storageBucket: "rostatsdata.appspot.com",
+  messagingSenderId: "786155982981",
+  appId: "1:786155982981:web:91862ca4336350314299ec",
+  measurementId: "G-W82VSPMJXH"
     };
     firebase.initializeApp(config);
   </script>
